force-app/main/default/objects/SFDC_Survey__c/fields/Client_Business_IT_Owner_Reference__c.field-meta.xml
<CustomField>
    <fullName>Client_Business_IT_Owner_Reference__c</fullName>
    <inlineHelpText>Given the experience you’ve had, would you ever be willing to take a call from a firm that was considering using this product?</inlineHelpText>
    <label>Client Business Owner Reference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Yet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>