force-app/main/default/objects/SFDC_Survey__c/fields/Client_Business_IT_Owner_Reference_Notes__c.field-meta.xml
<CustomField>
    <fullName>Client_Business_IT_Owner_Reference_Notes__c</fullName>
    <label>Client Business Owner Reference Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>