force-app/main/default/objects/SFDC_Survey__c/fields/Client_PjM_Reference_Notes__c.field-meta.xml
<CustomField>
    <fullName>Client_PjM_Reference_Notes__c</fullName>
    <label>Client PjM Reference Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>