force-app/main/default/objects/SFDC_Survey__c/fields/Client_PjM_Survey_Complete__c.field-meta.xml
<CustomField>
    <fullName>Client_PjM_Survey_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box once the Client PjM portion of the survey has been fully completed.</inlineHelpText>
    <label>Client PjM Survey Complete</label>
    <type>Checkbox</type>
</CustomField>