force-app/main/default/objects/SFDC_Survey__c/fields/Closed_Loop_Response_from_Intapp__c.field-meta.xml
<CustomField>
    <fullName>Closed_Loop_Response_from_Intapp__c</fullName>
    <label>Intapp Closed Loop Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>