force-app/main/default/objects/SFDC_Survey__c/fields/Customer_Closed_Loop__c.field-meta.xml
<CustomField>
    <fullName>Customer_Closed_Loop__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Customer Closed Loop</label>
    <type>Checkbox</type>
</CustomField>