force-app/main/default/objects/SFDC_Survey__c/fields/Customer_Closed_Loop_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Closed_Loop_Date__c</fullName>
    <label>Customer Closed Loop Date</label>
    <type>Date</type>
</CustomField>