force-app/main/default/objects/SFDC_Survey__c/fields/Customer_Closed_Loop_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Closed_Loop_Status__c</fullName>
    <label>Customer Closed Loop Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
                <default>true</default>
                <label>Required</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>