force-app/main/default/objects/SFDC_Survey__c/fields/Department_Flags__c.field-meta.xml
<CustomField>
    <fullName>Department_Flags__c</fullName>
    <description>What departments should be flagged to read this survey?</description>
    <inlineHelpText>What departments should be flagged to read this survey?</inlineHelpText>
    <label>Department Flags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>C Team</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Product Management</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>