force-app/main/default/objects/SFDC_Survey__c/fields/Engagement_Description__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Description__c</fullName>
    <label>Engagement Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>