force-app/main/default/objects/SFDC_Survey__c/fields/Engagement_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Expectations__c</fullName>
    <inlineHelpText>How well did the engagement meet your expectations?</inlineHelpText>
    <label>Engagement Expectations</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>