force-app/main/default/objects/SFDC_Survey__c/fields/General_Owner_Comments__c.field-meta.xml
<CustomField>
    <fullName>General_Owner_Comments__c</fullName>
    <inlineHelpText>Do you have any other comments that would be valuable for Intapp to hear?</inlineHelpText>
    <label>General Owner Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>