force-app/main/default/objects/SFDC_Survey__c/fields/Impression_of_Project_Advice__c.field-meta.xml
<CustomField>
    <fullName>Impression_of_Project_Advice__c</fullName>
    <inlineHelpText>What could we do to improve?</inlineHelpText>
    <label>Impression of Project: Advice</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>