force-app/main/default/objects/SFDC_Survey__c/fields/Impression_of_Support_Handover_Reason__c.field-meta.xml
<CustomField>
    <fullName>Impression_of_Support_Handover_Reason__c</fullName>
    <inlineHelpText>Why?</inlineHelpText>
    <label>Impression of Support: Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>