force-app/main/default/objects/SFDC_Survey__c/fields/Intapp_AC__c.field-meta.xml
<CustomField>
    <fullName>Intapp_AC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select the Intapp AC</inlineHelpText>
    <label>Intapp AC</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Surveys6</relationshipName>
    <type>Lookup</type>
</CustomField>