force-app/main/default/objects/SFDC_Survey__c/fields/Intapp_Closed_Loop__c.field-meta.xml
<CustomField>
    <fullName>Intapp_Closed_Loop__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Intapp Closed Loop</label>
    <type>Checkbox</type>
</CustomField>