force-app/main/default/objects/SFDC_Survey__c/fields/Intapp_Department_Follow_Up_Employee_I__c.field-meta.xml
<CustomField>
    <fullName>Intapp_Department_Follow_Up_Employee_I__c</fullName>
    <label>Intapp Department Follow-Up Employee</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AJ Ratnaparkhi</fullName>
            </value>
            <value>
                <fullName>Alastair Seddon</fullName>
                <isActive>false</isActive>
                <label>Alastair Seddon</label>
            </value>
            <value>
                <fullName>Chandana Nagalia</fullName>
                <isActive>false</isActive>
                <label>Chandana Nagalia</label>
            </value>
            <value>
                <fullName>Ching Lee</fullName>
                <isActive>false</isActive>
                <label>Ching Lee</label>
            </value>
            <value>
                <fullName>Ian Gaston</fullName>
            </value>
            <value>
                <fullName>James Morris</fullName>
            </value>
            <value>
                <fullName>Jose Lazares</fullName>
            </value>
            <value>
                <fullName>Justin Mitchell</fullName>
            </value>
            <value>
                <fullName>Laura Marino</fullName>
                <isActive>false</isActive>
                <label>Laura Marino</label>
            </value>
            <value>
                <fullName>Laurent Dinard</fullName>
            </value>
            <value>
                <fullName>Megan Buonaiuto</fullName>
                <isActive>false</isActive>
                <label>Megan Buonaiuto</label>
            </value>
            <value>
                <fullName>Mike Ni</fullName>
                <isActive>false</isActive>
                <label>Mike Ni</label>
            </value>
            <value>
                <fullName>Milan Bobde</fullName>
            </value>
            <value>
                <fullName>Phil Ashworth</fullName>
                <isActive>false</isActive>
                <label>Phil Ashworth</label>
            </value>
            <value>
                <fullName>Ranjini Nagraj</fullName>
            </value>
            <value>
                <fullName>Saurabh Mehra</fullName>
            </value>
            <value>
                <fullName>Shalaka Natu</fullName>
            </value>
            <value>
                <fullName>Warren Knowles</fullName>
            </value>
            <value>
                <fullName>Wouter Steenbergen</fullName>
                <isActive>false</isActive>
                <label>Wouter Steenbergen</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>