force-app/main/default/objects/SFDC_Survey__c/fields/Intapp_PC__c.field-meta.xml
<CustomField>
    <fullName>Intapp_PC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select the Intapp PC</inlineHelpText>
    <label>Intapp PC</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Surveys7</relationshipName>
    <type>Lookup</type>
</CustomField>