force-app/main/default/objects/SFDC_Survey__c/fields/Issue_Category_Project_Governance__c.field-meta.xml
<CustomField>
    <fullName>Issue_Category_Project_Governance__c</fullName>
    <formula>IF(
  INCLUDES(Issue_Category_Flag__c, &quot;Project governance issue&quot;),
  TRUE,
  FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Issue Category - Project governance</label>
    <type>Checkbox</type>
</CustomField>