force-app/main/default/objects/SFDC_Survey__c/fields/Issue_Category_Resource_communication__c.field-meta.xml
<CustomField>
    <fullName>Issue_Category_Resource_communication__c</fullName>
    <formula>IF(
  INCLUDES(Issue_Category_Flag__c, &quot;Resource communication issue&quot;),
  TRUE,
  FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Issue Category - Resource communication</label>
    <type>Checkbox</type>
</CustomField>