force-app/main/default/objects/SFDC_Survey__c/fields/Issue_Category_Work_quality_efficiency__c.field-meta.xml
<CustomField>
    <fullName>Issue_Category_Work_quality_efficiency__c</fullName>
    <formula>IF(
  INCLUDES(Issue_Category_Flag__c, &quot;Work quality and/or efficiency issue&quot;),
  TRUE,
  FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Issue Category - Work quality/efficiency</label>
    <type>Checkbox</type>
</CustomField>