force-app/main/default/objects/SFDC_Survey__c/fields/Lifecycle_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Confirmation__c</fullName>
    <inlineHelpText>Is your deployment in production?</inlineHelpText>
    <label>Product Implementation Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not in production with end users</fullName>
            </value>
            <value>
                <fullName>In production with some end users</fullName>
            </value>
            <value>
                <fullName>In production with all end users</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>