force-app/main/default/objects/SFDC_Survey__c/fields/OA_Project__c.field-meta.xml
<CustomField>
    <fullName>OA_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ticket 21680</description>
    <inlineHelpText>Please select a Project</inlineHelpText>
    <label>OA Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>SFDC Surveys</relationshipLabel>
    <relationshipName>SFDC_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>