force-app/main/default/objects/SFDC_Survey__c/fields/Owner_End_User_Satisfaction_Advice__c.field-meta.xml
<CustomField>
    <fullName>Owner_End_User_Satisfaction_Advice__c</fullName>
    <inlineHelpText>What could we do to improve?</inlineHelpText>
    <label>Owner End User Satisfaction: Advice</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>