force-app/main/default/objects/SFDC_Survey__c/fields/Owner_Impression_of_Partner_Advice__c.field-meta.xml
<CustomField>
    <fullName>Owner_Impression_of_Partner_Advice__c</fullName>
    <inlineHelpText>What could we do to improve?</inlineHelpText>
    <label>Owner Impression of Partner: Advice</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>