force-app/main/default/objects/SFDC_Survey__c/fields/Owner_Impression_of_Product_Reason__c.field-meta.xml
<CustomField>
    <fullName>Owner_Impression_of_Product_Reason__c</fullName>
    <inlineHelpText>Why?</inlineHelpText>
    <label>Owner Impression of Product: Reason</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>