force-app/main/default/objects/SFDC_Survey__c/fields/Owner_Project_Objective__c.field-meta.xml
<CustomField>
    <fullName>Owner_Project_Objective__c</fullName>
    <inlineHelpText>In a single sentence, what was your business objective for this project?
Operational and Business success criteria should be copied from opportunity, where available.</inlineHelpText>
    <label>Owner Project Objective</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>