force-app/main/default/objects/SFDC_Survey__c/fields/PjM_End_User_Satisfaction_Reason__c.field-meta.xml
<CustomField>
    <fullName>PjM_End_User_Satisfaction_Reason__c</fullName>
    <inlineHelpText>Why?</inlineHelpText>
    <label>PjM End User Satisfaction: Reason</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>