force-app/main/default/objects/SFDC_Survey__c/fields/PjM_Impression_of_Health_Advice__c.field-meta.xml
<CustomField>
    <fullName>PjM_Impression_of_Health_Advice__c</fullName>
    <inlineHelpText>What could we do to improve?</inlineHelpText>
    <label>PjM Impression of Health: Advice</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>