force-app/main/default/objects/SFDC_Survey__c/fields/PjM_Impression_of_Health_Reason__c.field-meta.xml
<CustomField>
    <fullName>PjM_Impression_of_Health_Reason__c</fullName>
    <inlineHelpText>Why?</inlineHelpText>
    <label>PjM Impression of Health: Reason</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>