force-app/main/default/objects/SFDC_Survey__c/fields/Principal_Consultant_Advice__c.field-meta.xml
<CustomField>
    <fullName>Principal_Consultant_Advice__c</fullName>
    <inlineHelpText>What could [name of Intapp Staff member] do to improve?</inlineHelpText>
    <label>Principal Consultant: Advice</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>