force-app/main/default/objects/SFDC_Survey__c/fields/Project_Manager_Reason__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_Reason__c</fullName>
    <inlineHelpText>Why?</inlineHelpText>
    <label>Project Manager: Reason</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>