force-app/main/default/objects/SFDC_Survey__c/fields/Promoter__c.field-meta.xml
<CustomField>
    <fullName>Promoter__c</fullName>
    <formula>IF(
  NPS_Response_Type__c = &quot;Promoter&quot;,
  TRUE,
  FALSE
)</formula>
    <label>Promoter</label>
    <type>Checkbox</type>
</CustomField>