force-app/main/default/objects/SFDC_Survey__c/fields/RCA_Call_Contact__c.field-meta.xml
<CustomField>
    <fullName>RCA_Call_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RCA Call Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Surveys2</relationshipName>
    <type>Lookup</type>
</CustomField>