force-app/main/default/objects/SFDC_Survey__c/fields/Reason_for_NPS_Score__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_NPS_Score__c</fullName>
    <label>Reason for NPS Score</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>