force-app/main/default/objects/SFDC_Survey__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Would you be willing to act as a reference? We will not use your name without checking.</inlineHelpText>
    <label>Reference</label>
    <type>Checkbox</type>
</CustomField>