force-app/main/default/objects/SFDC_Survey__c/fields/Root_Cause_Analysis_Category__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Analysis_Category__c</fullName>
    <description>When performing a root cause analysis on a bad survey result, please provide the reason for why we received the survey result that we did.</description>
    <inlineHelpText>When performing a root cause analysis on a bad survey result, please provide the reason for why we received the survey result that we did.</inlineHelpText>
    <label>RCA Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adoption</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>No Issues</fullName>
            </value>
            <value>
                <fullName>Training / Portal Contents</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>