force-app/main/default/objects/SFDC_Survey__c/fields/Root_Cause_Analysis_Notes__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Analysis_Notes__c</fullName>
    <label>RCA Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>