force-app/main/default/objects/SFDC_Survey__c/fields/Root_Cause_Analysis_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Analysis_Subcategory__c</fullName>
    <label>RCA Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Root_Cause_Analysis_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Lack of Product Knowledge</fullName>
            </value>
            <value>
                <fullName>Poor Response Time</fullName>
            </value>
            <value>
                <fullName>Project Took Too Long</fullName>
            </value>
            <value>
                <fullName>Wants UX Improvements</fullName>
            </value>
            <value>
                <fullName>Missing Functionality</fullName>
            </value>
            <value>
                <fullName>Product Quality</fullName>
            </value>
            <value>
                <fullName>Product not well adopted</fullName>
            </value>
            <value>
                <fullName>Unhappy with Price or Price Structure</fullName>
            </value>
            <value>
                <fullName>Believed score was good</fullName>
            </value>
            <value>
                <fullName>Process Issues</fullName>
            </value>
            <value>
                <fullName>Architecture</fullName>
            </value>
            <value>
                <fullName>Partner Issues</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Dissatisfied with Project</fullName>
            </value>
            <value>
                <fullName>Request More Outbound Communication</fullName>
            </value>
            <value>
                <fullName>Resolvable Issue</fullName>
            </value>
            <value>
                <fullName>Product Documentation Lacking or Nonexistent</fullName>
            </value>
            <value>
                <fullName>Dissatisfied with Training or Training Material</fullName>
            </value>
            <value>
                <fullName>Improve communications on new releases/features</fullName>
            </value>
            <value>
                <fullName>Business case uncertain or in doubt</fullName>
            </value>
            <value>
                <fullName>Poor engagement and/or communications</fullName>
            </value>
            <value>
                <fullName>Request for more training</fullName>
            </value>
            <value>
                <fullName>Request to improve portal contents</fullName>
            </value>
            <value>
                <fullName>More engagement requested</fullName>
            </value>
            <value>
                <fullName>Improve promotion of best practices</fullName>
            </value>
            <value>
                <fullName>Enhancements requested</fullName>
            </value>
            <value>
                <fullName>No Issues Reported</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>