force-app/main/default/objects/SFDC_Survey__c/fields/Solutions_Engineer_Advice__c.field-meta.xml
<CustomField>
    <fullName>Solutions_Engineer_Advice__c</fullName>
    <inlineHelpText>What could [name of Intapp Staff member] do to improve?</inlineHelpText>
    <label>Solutions Engineer: Advice</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>