force-app/main/default/objects/SFDC_Survey__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Customer</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>