force-app/main/default/objects/SFDC_Survey__c/fields/Subscription_Contacts_List__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Contacts_List__c</fullName>
    <inlineHelpText>We associate special contacts with subscriptions so that we can notify them – for example when there are bugs that require notification.  Can you help me with a few names, please?  (IT owner, business owner, it administrator, lead user, trainer, etc)</inlineHelpText>
    <label>Product Customer Contact</label>
    <type>TextArea</type>
</CustomField>