force-app/main/default/objects/SFDC_Survey__c/fields/Survey_Request__c.field-meta.xml
<CustomField>
    <fullName>Survey_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Request</label>
    <referenceTo>Survey_Request__c</referenceTo>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>